--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,15 +7,14 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v5
     - name: Set up Python 3.13
       uses: actions/setup-python@v6
       with:
-        python-version: 3.11.13
+        python-version: 3.11.14
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
